isotopes-and-atomic-mass: Made the atoms on the 2nd tab be in front of all indicators and buttons in case the user tries to drag them there.
isotopes-and-atomic-mass: Made the neutrons be on top of all indicators (e.g. the periodic table) in case the user drags them there.
Fixed up the colors - particularly red - to work better for color blind individuals.
# 2.03.03 (51226) Apr 26, 2011
4/26/11 Deploying to dev for testing.
isotopes-and-atomic-mass: Added an algorithm to reposition atoms when dropped on top of one another in the test chamber.
isotopes-and-atomic-mass: Internationalized all strings.
# 2.03.02 (50953) Apr 20, 2011
4/20/11 Publishing do dev for review and possible use in interviews
isotopes-and-atomic-mass: Changed the scaling of the atom diameters so that the My Isotope label, which is positioned above the electron shell, never overlaps with the particle legend.
isotopes-and-atomic-mass: Changed the position of the abundance indicator inside the box on the 1st tab so that the readout isn't right against the edge of the box.
# 2.03.01 (50876) Apr 19, 2011
4/19/11 Publishing to dev for review and possibly for interviews.
isotopes-and-atomic-mass: Made the isotope on the first tab grow and shrink based on the selected element.
isotopes-and-atomic-mass: Changed various label text and positions based on input from the chemistry team.
# 2.03.00 (50694) Apr 15, 2011
4/15/11 > Fixed an issue with extraction of electrons from the cloud representation.
# 2.01.06 (50623) Apr 13, 2011
4/13/11 Deploying to dev for interviews.
isotopes-and-atomic-mass: Made the average atomic mass indicator use the correct number of decimal digits when showing natures mix (resolution is based on a table obtained from NIST).
isotopes-and-atomic-mass: Switched to use white background with red border for showing highlighted element in the periodic table node
isotopes-and-atomic-mass: Limited pie chart resolution to 4 decimal points